common-applications/test-environment/openeuler-qa-robot/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-robot-openeuler-service
  namespace: qa-robot
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: qa-robot-openeuler
  type: ClusterIP
